[project]
name = "SRResNet-SuperResolution-COCO2017"
version = "0.1.0"
description = "PyTorch Super Resolution Residual Network trained on the COCO2017 dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "packaging>=25.0",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
]
